@@ -3,7 +3,7 @@ package snownee.fruits.ritual;
 import java.util.List;
 
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.BlockSource;
+import net.minecraft.core.dispenser.BlockSource;
 import net.minecraft.core.dispenser.DefaultDispenseItemBehavior;
 import net.minecraft.core.dispenser.DispenseItemBehavior;
 import net.minecraft.server.level.ServerLevel;
@@ -14,7 +14,6 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.block.BeehiveBlock;
 import net.minecraft.world.level.block.DispenserBlock;
-import net.minecraft.world.level.block.entity.DispenserBlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.gameevent.GameEvent;
 import net.minecraft.world.phys.AABB;
@@ -30,8 +29,8 @@ public class CollectDragonBreathDispenseBehavior extends DefaultDispenseItemBeha
 
 	@Override
 	protected ItemStack execute(BlockSource blockSource, ItemStack itemStack) {
-		ServerLevel level = blockSource.getLevel();
-		BlockPos blockPos = blockSource.getPos().relative(blockSource.getBlockState().getValue(DispenserBlock.FACING));
+		ServerLevel level = blockSource.level();
+		BlockPos blockPos = blockSource.pos().relative(blockSource.state().getValue(DispenserBlock.FACING));
 		BlockState blockState = level.getBlockState(blockPos);
 		if (blockState.is(
 				BlockTags.BEEHIVES, blockStateBase -> blockStateBase.hasProperty(BeehiveBlock.HONEY_LEVEL) &&
@@ -42,9 +41,11 @@ public class CollectDragonBreathDispenseBehavior extends DefaultDispenseItemBeha
 			return original.dispense(blockSource, itemStack);
 		}
 		List<AreaEffectCloud> list = level.getEntitiesOfClass(
-				AreaEffectCloud.class, new AABB(blockPos).inflate(0.2), CollectDragonBreathDispenseBehavior::isValidDragonBreath);
+				AreaEffectCloud.class,
+				new AABB(blockPos).inflate(0.2),
+				CollectDragonBreathDispenseBehavior::isValidDragonBreath);
 		if (!list.isEmpty()) {
-			AreaEffectCloud areaEffectCloud2 = list.get(0);
+			AreaEffectCloud areaEffectCloud2 = list.getFirst();
 			areaEffectCloud2.setRadius(areaEffectCloud2.getRadius() - 0.5f);
 			itemStack.shrink(1);
 			ItemStack dragonBreath = new ItemStack(Items.DRAGON_BREATH);
@@ -52,7 +53,7 @@ public class CollectDragonBreathDispenseBehavior extends DefaultDispenseItemBeha
 				level.gameEvent(null, GameEvent.FLUID_PICKUP, blockPos);
 				return dragonBreath;
 			}
-			if (((DispenserBlockEntity) blockSource.getEntity()).addItem(dragonBreath.copy()) < 0) {
+			if (blockSource.blockEntity().addItem(dragonBreath.copy()) < 0) {
 				super.dispense(blockSource, dragonBreath.copy());
 			}
 			return itemStack;
@@ -61,7 +62,7 @@ public class CollectDragonBreathDispenseBehavior extends DefaultDispenseItemBeha
 	}
 
 	public static boolean isValidDragonBreath(AreaEffectCloud cloud) {
-		if (cloud == null || !cloud.isAlive()) {
+		if (!cloud.isAlive()) {
 			return false;
 		}
 		if (FFCommonConfig.fixDragonBreathExploit && cloud.getRadius() <= 0) {
